--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -1,5 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <record model="ir.ui.view" id="procom_commissions_view_tree">
+        <field name="name">ProCommissions Tree View</field>
+        <field name="model">procom.commission</field>
+        <field name="priority" eval="16" />
+        <field name="arch" type="xml">
+            <tree string="Commissions List">
+                <field name="name" string="Name"/>
+                <field name="amount" string="Amount"/>
+            </tree>
+        </field>
+    </record>
+    <record model="ir.ui.view" id="procom_commissions_view_form">
+        <field name="name">procom.commission.view.form</field>
+        <field name="model">procom.commission</field>
+        <field name="arch" type="xml">
+            <form string="Commission">
+                <sheet>
+                    <field name="name" string="Commission Name"/>
+                    <notebook>
+                        <page string="Salespeople">
+                            <group>
+                                <field name="salesperson_one" string="Salesperson #1"/>
+                            </group>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+</odoo>
+
+<!-- <?xml version="1.0" encoding="UTF-8"?>
+<odoo>
     <record id="view_pro_commissions_tree" model="ir.ui.view">
         <field name="name">pro.commissions.tree</field>
         <field name="model">pro.commissions</field>
@@ -21,4 +54,4 @@
             </p>
         </field>
     </record>
-</odoo>
+</odoo> -->
