--- a/procommissions/views/menu_views.xml
+++ b/procommissions/views/menu_views.xml
@@ -1,9 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!-- <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <menuitem id="menu_pro_commissions_root" action="action_pro_commissions" />
-    <!-- <menuitem id="test_menu_root" name="Test">
+    <menuitem id="test_menu_root" name="Test">
     <menuitem id="test_first_level_menu" name="First Level">
         <menuitem id="test_model_menu_action" action="test_model_action"/>
     </menuitem>
-</menuitem> -->
+</menuitem>
+</odoo> -->
+
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+    <record model="ir.actions.act_window" id="action_commissions">
+        <field name="name">Commission</field>
+        <field name="res_model">procom.commission</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <menuitem name="ProCommissions" id="procom_root_menu" />
+
+    <menuitem name="Commissions" id="procom_commissions_menu" parent="procom_root_menu" action="action_commissions" sequence="1"/>
 </odoo>
