remove partner_id

--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <tree string="Commissions List">
                 <field name="invoice_id" string="Invoice"/>
-                <field name="partner_id" string="Customer"/>
+                <!-- <field name="partner_id" string="Customer"/> -->
                 <field name="invoice_date" string="Invoice Date"/>
             </tree>
         </field>
@@ -23,7 +23,7 @@
                         <page string="Salespeople">
                             <group>
                                 <field name="invoice_id" string="Invoice"/>
-                                <field name="partner_id" string="Customer"/>
+                                <!-- <field name="partner_id" string="Customer"/> -->
                                 <field name="invoice_date" string="Invoice Date"/>
                                 <!-- <field name="salesperson_one" string="Salesperson #1"/> -->
                             </group>
