--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -8,7 +8,7 @@
             <tree string="Commissions List">
                 <field name="invoice_id" string="Invoice"/>
                 <!-- <field name="partner_id" string="Customer"/> -->
-                <field name="invoice_date" string="Invoice Date"/>
+                <!-- <field name="invoice_date" string="Invoice Date"/> -->
             </tree>
         </field>
     </record>
@@ -24,7 +24,7 @@
                             <group>
                                 <field name="invoice_id" string="Invoice"/>
                                 <!-- <field name="partner_id" string="Customer"/> -->
-                                <field name="invoice_date" string="Invoice Date"/>
+                                <!-- <field name="invoice_date" string="Invoice Date"/> -->
                                 <!-- <field name="salesperson_one" string="Salesperson #1"/> -->
                             </group>
                         </page>
