--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <!-- Tree view for commissions -->
     <record model="ir.ui.view" id="procom_commissions_view_tree">
         <field name="name">ProCommissions Tree View</field>
         <field name="model">procom.commission</field>
@@ -7,55 +7,39 @@
         <field name="arch" type="xml">
             <tree string="Commissions List">
                 <field name="invoice_id" string="Invoice"/>
-                <!-- <field name="partner_id" string="Customer"/> -->
-                <!-- <field name="invoice_date" string="Invoice Date"/> -->
             </tree>
         </field>
     </record>
+
+    <!-- Form view for commissions -->
     <record model="ir.ui.view" id="procom_commissions_view_form">
         <field name="name">procom.commission.view.form</field>
         <field name="model">procom.commission</field>
         <field name="arch" type="xml">
             <form string="Commission">
+                <header>
+                    <!-- Action button to create commissions for all invoices -->
+                    <button name="create_commission_for_all_invoices" type="object" string="Create Commissions"/>
+                    <!-- Action button to clear all commissions -->
+                    <button name="clear_commission_records" type="object" string="Clear Commissions" confirm="Are you sure you want to delete all commissions?"/>
+                </header>
                 <sheet>
-                    <field name="name" string="Commission Name"/>
-                    <notebook>
-                        <page string="Salespeople">
-                            <group>
-                                <field name="invoice_id" string="Invoice"/>
-                                <!-- <field name="partner_id" string="Customer"/> -->
-                                <!-- <field name="invoice_date" string="Invoice Date"/> -->
-                                <!-- <field name="salesperson_one" string="Salesperson #1"/> -->
-                            </group>
-                        </page>
-                    </notebook>
+                    <group>
+                        <field name="invoice_id" string="Invoice"/>
+                    </group>
                 </sheet>
             </form>
         </field>
     </record>
+
+    <!-- Action for list view -->
+    <record model="ir.actions.act_window" id="action_commissions">
+        <field name="name">Commission</field>
+        <field name="res_model">procom.commission</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Menu item -->
+    <menuitem name="ProCommissions" id="procom_root_menu" />
+    <menuitem name="Commissions" id="procom_commissions_menu" parent="procom_root_menu" action="action_commissions" sequence="1"/>
 </odoo>
-
-<!-- <?xml version="1.0" encoding="UTF-8"?>
-<odoo>
-    <record id="view_pro_commissions_tree" model="ir.ui.view">
-        <field name="name">pro.commissions.tree</field>
-        <field name="model">pro.commissions</field>
-        <field name="arch" type="xml">
-            <tree string="Pro Commissions">
-                <field name="name"/>
-                <field name="amount"/>
-            </tree>
-        </field>
-    </record>
-
-    <record id="action_pro_commissions" model="ir.actions.act_window">
-        <field name="name">Pro Commissions</field>
-        <field name="res_model">pro.commissions</field>
-        <field name="view_mode">tree</field>
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create your first Pro Commission Record
-            </p>
-        </field>
-    </record>
-</odoo> -->
