--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <!-- Tree view for commissions -->
     <record model="ir.ui.view" id="procom_commissions_view_tree">
@@ -6,7 +7,10 @@
         <field name="priority" eval="16" />
         <field name="arch" type="xml">
             <tree string="Commissions List">
-                <field name="invoice_id" string="Invoice"/>
+                <field name="name" string="Commission Name"/>
+                <field name="related_lead" string="Related Lead"/>
+                <field name="related_order" string="Related Order"/>
+                <field name="related_invoice" string="Related Invoice"/>
             </tree>
         </field>
     </record>
@@ -18,14 +22,14 @@
         <field name="arch" type="xml">
             <form string="Commission">
                 <header>
-                    <!-- Action button to create commissions for all invoices -->
-                    <button name="create_commission_for_all_invoices" type="object" string="Create Commissions"/>
-                    <!-- Action button to clear all commissions -->
-                    <button name="clear_commission_records" type="object" string="Clear Commissions" confirm="Are you sure you want to delete all commissions?"/>
+                    <!-- Buttons will go here -->
                 </header>
                 <sheet>
                     <group>
-                        <field name="invoice_id" string="Invoice"/>
+                        <field name="name" string="Commission Name"/>
+                        <field name="related_lead" string="Related Lead"/>
+                        <field name="related_order" string="Related Order"/>
+                        <field name="related_invoice" string="Related Invoice"/>
                     </group>
                 </sheet>
             </form>
