--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
             <tree string="Commissions List">
                 <field name="name" string="Commission Name"/>
+                <field name="partner_id" string="Customer"/>
                 <field name="related_lead" string="Related Lead"/>
                 <field name="related_order" string="Related Order"/>
                 <field name="related_invoice" string="Related Invoice"/>
@@ -27,6 +28,7 @@
                 <sheet>
                     <group>
                         <field name="name" string="Commission Name"/>
+                        <field name="partner_id" string="Customer"/>
                         <field name="related_lead" string="Related Lead"/>
                         <field name="related_order" string="Related Order"/>
                         <field name="related_invoice" string="Related Invoice"/>
