Added salesperson fields

--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -11,6 +11,12 @@
                 <field name="related_lead" string="Related Lead"/>
                 <field name="related_order" string="Related Order"/>
                 <field name="related_invoice" string="Related Invoice"/>
+
+                <field name="new_customer" string="New Customer" />
+                <field name="logged_lead" string="Logged Lead" />
+                <field name="developed_lead" string="Developed Lead" />
+                <field name="performed_demo" string="Performed Demo" />
+                <field name="quote_to_order" string="Quote to Order" />
             </tree>
         </field>
     </record>
@@ -30,6 +36,12 @@
                         <field name="related_lead" string="Related Lead"/>
                         <field name="related_order" string="Related Order"/>
                         <field name="related_invoice" string="Related Invoice"/>
+
+                        <field name="new_customer" string="New Customer" />
+                        <field name="logged_lead" string="Logged Lead" />
+                        <field name="developed_lead" string="Developed Lead" />
+                        <field name="performed_demo" string="Performed Demo" />
+                        <field name="quote_to_order" string="Quote to Order" />
                     </group>
                 </sheet>
             </form>
