--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -12,11 +12,16 @@
                 <field name="related_order" string="Related Order"/>
                 <field name="related_invoice" string="Related Invoice"/>
 
-                <field name="new_customer" string="New Customer" />
-                <field name="logged_lead" string="Logged Lead" />
-                <field name="developed_lead" string="Developed Lead" />
-                <field name="performed_demo" string="Performed Demo" />
-                <field name="quote_to_order" string="Quote to Order" />
+                <field name="new_customer" string="New Customer"/>
+                <field name="new_customer_commission" string="New Customer Commission"/>
+                <field name="logged_lead" string="Logged Lead"/>
+                <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                <field name="developed_lead" string="Developed Opportunity"/>
+                <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                <field name="performed_demo" string="Performed Demo"/>
+                <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                <field name="quote_to_order" string="Quote to Order"/>
+                <field name="quote_to_order_commission" string="Quote to Order Commission"/>
             </tree>
         </field>
     </record>
@@ -36,12 +41,18 @@
                         <field name="related_lead" string="Related Lead"/>
                         <field name="related_order" string="Related Order"/>
                         <field name="related_invoice" string="Related Invoice"/>
-
-                        <field name="new_customer" string="New Customer" />
-                        <field name="logged_lead" string="Logged Lead" />
-                        <field name="developed_lead" string="Developed Lead" />
-                        <field name="performed_demo" string="Performed Demo" />
-                        <field name="quote_to_order" string="Quote to Order" />
+                    </group>
+                    <group>
+                        <field name="new_customer" string="New Customer"/>
+                        <field name="new_customer_commission" string="New Customer Commission"/>
+                        <field name="logged_lead" string="Logged Lead"/>
+                        <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                        <field name="developed_lead" string="Developed Opportunity"/>
+                        <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                        <field name="performed_demo" string="Performed Demo"/>
+                        <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                        <field name="quote_to_order" string="Quote to Order"/>
+                        <field name="quote_to_order_commission" string="Quote to Order Commission"/>
                     </group>
                 </sheet>
             </form>
