--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -36,29 +36,40 @@
                     <!-- Buttons will go here -->
                 </header>
                 <sheet>
-                    <group>
+                    <group string="Basic Information">
                         <field name="name" string="Commission Name"/>
                         <field name="related_lead" string="Related Lead"/>
                         <field name="related_order" string="Related Order"/>
                         <field name="related_invoice" string="Related Invoice"/>
                     </group>
-                    <group>
-                        <field name="new_customer" string="New Customer"/>
-                        <field name="new_customer_commission" string="New Customer Commission"/>
-                        <field name="logged_lead" string="Logged Lead"/>
-                        <field name="logged_lead_commission" string="Logged Lead Commission"/>
-                        <field name="developed_lead" string="Developed Opportunity"/>
-                        <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
-                        <field name="performed_demo" string="Performed Demo"/>
-                        <field name="performed_demo_commission" string="Performed Demo Commission"/>
-                        <field name="quote_to_order" string="Quote to Order"/>
-                        <field name="quote_to_order_commission" string="Quote to Order Commission"/>
-                    </group>
-                    <group>
+                    
+                    <!-- Financial Calculations Group -->
+                    <group string="Financial Calculations" colspan="2">
                         <field name="sales_price" string="Sales Price (before tax)"/>
                         <field name="reality_cost" string="Reality Cost"/>
                         <field name="shipping_cost" string="Shipping Cost"/>
                         <field name="reality_margin" string="Reality Margin"/>
+                    </group>
+
+                    <!-- Sales Roles and Commissions Group -->
+                    <group string="Sales Roles and Commissions" colspan="2">
+                        <div class="oe_title" style="font-weight: bold; padding-top: 10px;">Sales Roles</div>
+                        <div class="o_row">
+                            <div class="o_col">
+                                <field name="new_customer" string="New Customer"/>
+                                <field name="logged_lead" string="Logged Lead"/>
+                                <field name="developed_lead" string="Developed Opportunity"/>
+                                <field name="performed_demo" string="Performed Demo"/>
+                                <field name="quote_to_order" string="Quote to Order"/>
+                            </div>
+                            <div class="o_col">
+                                <field name="new_customer_commission" string="New Customer Commission"/>
+                                <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                                <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                                <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                                <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                            </div>
+                        </div>
                     </group>
                 </sheet>
             </form>
