--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -53,24 +53,19 @@
 
                     <!-- Sales Roles and Commissions Group -->
                     <group string="Sales Roles and Commissions" colspan="2">
-                        <div class="oe_title" style="font-weight: bold; padding-top: 10px;">Sales Roles</div>
-                        <div class="o_row">
-                            <div class="o_col">
-                                <field name="new_customer" string="New Customer"/>
-                                <field name="logged_lead" string="Logged Lead"/>
-                                <field name="developed_lead" string="Developed Opportunity"/>
-                                <field name="performed_demo" string="Performed Demo"/>
-                                <field name="quote_to_order" string="Quote to Order"/>
-                            </div>
-                            <div class="o_col">
-                                <field name="new_customer_commission" string="New Customer Commission"/>
-                                <field name="logged_lead_commission" string="Logged Lead Commission"/>
-                                <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
-                                <field name="performed_demo_commission" string="Performed Demo Commission"/>
-                                <field name="quote_to_order_commission" string="Quote to Order Commission"/>
-                            </div>
-                        </div>
+                    <group col="2">
+                        <field name="new_customer" string="New Customer"/>
+                        <field name="new_customer_commission" string="New Customer Commission"/>
+                        <field name="logged_lead" string="Logged Lead"/>
+                        <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                        <field name="developed_lead" string="Developed Opportunity"/>
+                        <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                        <field name="performed_demo" string="Performed Demo"/>
+                        <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                        <field name="quote_to_order" string="Quote to Order"/>
+                        <field name="quote_to_order_commission" string="Quote to Order Commission"/>
                     </group>
+                </group>
                 </sheet>
             </form>
         </field>
