--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -53,17 +53,18 @@
 
                     <!-- Sales Roles and Commissions Group -->
                     <group string="Sales Roles and Commissions" colspan="2">
-                    <group col="2">
-                        <field name="new_customer" string="New Customer"/>
-                        <field name="new_customer_commission" string="New Customer Commission"/>
-                        <field name="logged_lead" string="Logged Lead"/>
-                        <field name="logged_lead_commission" string="Logged Lead Commission"/>
-                        <field name="developed_lead" string="Developed Opportunity"/>
-                        <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
-                        <field name="performed_demo" string="Performed Demo"/>
-                        <field name="performed_demo_commission" string="Performed Demo Commission"/>
-                        <field name="quote_to_order" string="Quote to Order"/>
-                        <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                        <group col="2">
+                            <field name="new_customer" string="New Customer"/>
+                            <field name="new_customer_commission" string="New Customer Commission"/>
+                            <field name="logged_lead" string="Logged Lead"/>
+                            <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                            <field name="developed_lead" string="Developed Opportunity"/>
+                            <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                            <field name="performed_demo" string="Performed Demo"/>
+                            <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                            <field name="quote_to_order" string="Quote to Order"/>
+                            <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                        </group>
                     </group>
                 </group>
                 </sheet>
