--- a/procommissions/views/invoice_views.xml
+++ b/procommissions/views/invoice_views.xml
@@ -6,9 +6,9 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <!-- Locate the Delivery Date field in the Other Info tab -->
-            <xpath expr="//page[@name='other_info']/group/group/field[@name='delivery_date']" position="after">
+            <!-- <xpath expr="//page[@name='other_info']/group/group/field[@name='delivery_date']" position="after">
                 <field name="source_order" string="Source Order"/>
-            </xpath>
+            </xpath> -->
         </field>
     </record>
 </odoo>
