--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -58,21 +58,33 @@
                     <notebook>
                         <page string="Sales Roles">
                             <group>
-                                <field name="new_customer" string="New Customer"/>
-                                <field name="new_customer_commission" string="New Customer Commission"/>
-                                <field name="logged_lead" string="Logged Lead"/>
-                                <field name="logged_lead_commission" string="Logged Lead Commission"/>
-                                <field name="developed_lead" string="Developed Opportunity"/>
-                                <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
-                                <field name="performed_demo" string="Performed Demo"/>
-                                <field name="performed_demo_commission" string="Performed Demo Commission"/>
-                                <field name="quote_to_order" string="Quote to Order"/>
-                                <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                                <group string="Roles">
+                                    <field name="new_customer" string="New Customer"/>
+                                    <field name="logged_lead" string="Logged Lead"/>
+                                    <field name="developed_lead" string="Developed Opportunity"/>
+                                    <field name="performed_demo" string="Performed Demo"/>
+                                    <field name="quote_to_order" string="Quote to Order"/>
+                                </group>
+                                <group string="Commissions">
+                                    <field name="new_customer_commission" string="New Customer Commission"/>
+                                    <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                                    <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                                    <field name="performed_demo_commission" string="Performed Demo Commission"/>
+                                    <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                                </group>
                             </group>
                         </page>
                         
                         <page string="Demo Roles">
-                            <!-- Currently empty for future content -->
+                            <field name="demo_role_ids" nolabel="1">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="sold_price" readonly="1"/>
+                                    <field name="purchased_price"/>
+                                    <field name="performed_demo"/>
+                                    <field name="commission" readonly="1"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
