--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -16,7 +16,7 @@
                 <field name="new_customer" string="New Customer"/>
                 <field name="logged_lead" string="Logged Lead"/>
                 <field name="developed_lead" string="Developed Opportunity"/>
-                <field name="performed_demo" string="Performed Demo"/>
+                <!-- <field name="performed_demo" string="Performed Demo"/> -->
                 <field name="quote_to_order" string="Quote to Order"/>
             </tree>
         </field>
@@ -62,7 +62,7 @@
                                     <field name="new_customer" string="New Customer"/>
                                     <field name="logged_lead" string="Logged Lead"/>
                                     <field name="developed_lead" string="Developed Opportunity"/>
-                                    <field name="performed_demo" string="Performed Demo"/>
+                                    <!-- <field name="performed_demo" string="Performed Demo"/> -->
                                     <field name="quote_to_order" string="Quote to Order"/>
                                 </group>
                                 <group string="Commissions">
