--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -54,6 +54,8 @@
                         </group>
                     </group>
 
+                    <field name="available_product_ids" invisible="1"/>
+
                     <!-- Tabs for Sales Roles and Demo Roles -->
                     <notebook>
                         <page string="Sales Roles">
