--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -76,6 +76,12 @@
                         </page>
                         
                         <page string="Demo Records">
+                            <field name="order_line_ids" widget="one2many_list">
+                                <tree string="Demo Products">
+                                    <field name="product_id" string="Product Name"/>
+                                    <field name="price_unit" string="Price"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
