--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -80,6 +80,9 @@
                                 <tree string="Demo Products">
                                     <field name="product_id" string="Product Name"/>
                                     <field name="price_unit" string="Price"/>
+                                    <field name="leica_price" string="Leica Price"/>
+                                    <field name="demo_by" string="Demo By"/>
+                                    <field name="commission" string="Commission"/>
                                 </tree>
                             </field>
                         </page>
