--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -74,12 +74,13 @@
                                 </group>
                             </group>
                         </page>
+                        
                         <page string="Demo Records">
                             <group>
                                 <field name="demo_count" string="Number of Demos"/>
                                 <field name="total_demo_commission" string="Total Demo Commission"/>
                             </group>
-                            <field name="demo_records" widget="one2many_list">
+                            <field name="order_line_ids" widget="one2many_list">
                                 <tree string="Demo Products" editable="bottom">
                                     <field name="product_id" string="Product Name" readonly="1"/>
                                     <field name="price_unit" string="Price" readonly="1"/>
@@ -89,6 +90,7 @@
                                 </tree>
                             </field>
                         </page>
+
                     </notebook>
                 </sheet>
             </form>
