--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -81,7 +81,9 @@
                                 <field name="total_demo_commission" string="Total Demo Commission"/>
                             </group>
                             <group>
-                                <label string="Order lines will only appear here when they have a user set who performed a demo for the product. To set a user, look for the 'Demo by' column in the sales order document. You may have to unlock the document to alter it before saving." class="o_form_label" colspan="4" align="center"/>
+                                <span>
+                                Order lines will only appear here when they have a user set who performed a demo for the product. To set a user, look for the 'Demo by' column in the sales order document. You may have to unlock the document to alter it before saving.
+                                </span>
                             </group>
                             <field name="order_line_ids" widget="one2many_list">
                                 <tree string="Demo Products" editable="bottom">
